src/objects/zkmulti__ProFormaInvoice__c.object
<CustomObject>
    <fields>
        <fullName>zkmulti__Purpose__c</fullName>
        <label>Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gift</fullName>
                </value>
                <value>
                    <fullName>Not Sold</fullName>
                </value>
                <value>
                    <fullName>Personal Effects</fullName>
                </value>
                <value>
                    <fullName>Repair and Return</fullName>
                </value>
                <value>
                    <fullName>Sample</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkmulti__SpecialInstructionsExtended__c</fullName>
        <label>Special Instructions Extended</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zkmulti__SpecialInstructions__c</fullName>
        <label>Special Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkmulti__TermsOfSale__c</fullName>
        <label>Terms of Sale</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cost and Freight (CFR)</fullName>
                </value>
                <value>
                    <fullName>Carriage Paid TO (CPT)</fullName>
                </value>
                <value>
                    <fullName>Cost Insurance and Freight (CIF)</fullName>
                </value>
                <value>
                    <fullName>Carriage Insurance Paid (CIP)</fullName>
                </value>
                <value>
                    <fullName>Delivered at Place (DAP)</fullName>
                </value>
                <value>
                    <fullName>Delivered at Terminal (DAT)</fullName>
                </value>
                <value>
                    <fullName>Delivered Duty Paid (DDP)</fullName>
                </value>
                <value>
                    <fullName>Delivered Duty Unpaid (DDU)</fullName>
                </value>
                <value>
                    <fullName>Ex Works (EXW)</fullName>
                </value>
                <value>
                    <fullName>Free On Board (FOB)</fullName>
                </value>
                <value>
                    <fullName>Free Carrier (FCA)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Pro Forma Invoice</label>
    <nameField>
        <displayFormat>PF-INV-{00000000}</displayFormat>
        <label>Pro Forma Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pro Forma Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>